<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/custom_dialog_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/custom_dialog_rating_title"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/custom_dialog_rating_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/custom_dialog_rating_description"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_custom_dialog_rate_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/custom_dialog_rating_yes"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_custom_dialog_rate_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/custom_dialog_rating_no"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />



    </LinearLayout>


</LinearLayout>